# RIPC

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
client/: Makefile
docs/: notes.md
driver/: .clangd  CMakeLists.txt  Makefile  client.c  client.h  connection.c  connection.h  err.h  id.c  id.h  ipc_driver.c  main.c  server.c  server.h  shm.c  shm.h  sigs.c  sigs.h  task.c  task.h
examples/: CMakeLists.txt
examples/1/: CMakeLists.txt  client.cpp  server.cpp
examples/2/: CMakeLists.txt  client.cpp  server.cpp
examples/3/: CMakeLists.txt  client.cpp  server.cpp
examples/test/: test.c
examples/test_app/: CMakeLists.txt
include/: client.h  id_pack.h  request.h  response.h  ripc.h  server.h  session.h
libripc/: CMakeLists.txt
libripc/include/ripc/: client.hpp  context.hpp  entity_manager.hpp  logger.hpp  rest_client.hpp  rest_server.hpp  ripc.hpp  server.hpp  submem.hpp  types.hpp  url.hpp
libripc/src/: api.cpp  client.cpp  context.cpp  entity_manager.cpp  logger.cpp  rest_client.cpp  rest_server.cpp  server.cpp  submem.cpp  url.cpp
ripcctl/: CMakeLists.txt  ripcctl.c
server/: Makefile  server.c
src/: Makefile  client.cpp  ipc_driver.c  request.cpp  response.cpp  server.cpp  session.cpp
test/: CMakeLists.txt  Makefile  client.cpp  server.cpp  test.c  test.h
test_app/: app.cpp
test_app2/: CMakeLists.txt  app.cpp
test_app3/: CMakeLists.txt  client.cpp  server.cpp
test_client_server/: ipc_client.c  ipc_server.c
tests/: CMakeLists.txt  tests.hpp
tests/functional/: CMakeLists.txt  client_registration.cpp  connection.cpp  connection_manipulations.cpp  data_transmission.cpp  registration.cpp  server_registration.cpp
tests/load/: CMakeLists.txt  many_clients.cpp  many_requests.cpp
